# AngularFrontend/src/app/api/models/new-user-credentials.ts
@@ -1,0 +1,10 @@
+/* tslint:disable */
+/* eslint-disable */
+
+/**
+ * (tsType: Omit<UserCredentials, 'iduser_credentials'>, schemaOptions: { title: 'NewUserCredentials', exclude: [ 'iduser_credentials' ] })
+ */
+export interface NewUserCredentials {
+  password: string;
+  username: string;
+}
