# AngularFrontend/src/app/api/models/user-credentials-partial.ts
@@ -1,0 +1,11 @@
+/* tslint:disable */
+/* eslint-disable */
+
+/**
+ * (tsType: Partial<UserCredentials>, schemaOptions: { partial: true })
+ */
+export interface UserCredentialsPartial {
+  iduser_credentials?: number;
+  password?: string;
+  username?: string;
+}
