# AngularFrontend/src/app/api/models/user-credentials-with-relations.ts
@@ -1,0 +1,11 @@
+/* tslint:disable */
+/* eslint-disable */
+
+/**
+ * (tsType: UserCredentialsWithRelations, schemaOptions: { includeRelations: true })
+ */
+export interface UserCredentialsWithRelations {
+  iduser_credentials?: number;
+  password: string;
+  username: string;
+}
