# AngularFrontend/src/app/api/models/user-credentials.ts
@@ -1,0 +1,7 @@
+/* tslint:disable */
+/* eslint-disable */
+export interface UserCredentials {
+  iduser_credentials?: number;
+  password: string;
+  username: string;
+}
