# AngularFrontend/src/app/api/services.ts
@@ -1,3 +1,4 @@
 export { PatientControllerService } from './services/patient-controller.service';
 export { PingControllerService } from './services/ping-controller.service';
 export { ProviderControllerService } from './services/provider-controller.service';
+export { UserCredentialsControllerService } from './services/user-credentials-controller.service';
