# LoopBack_API/openapi.json
@@ -638,6 +638,309 @@
         ],
         "operationId": "ProviderController.find"
       }
+    },
+    "/user-credentials/count": {
+      "get": {
+        "x-controller-name": "UserCredentialsController",
+        "x-operation-name": "count",
+        "tags": [
+          "UserCredentialsController"
+        ],
+        "responses": {
+          "200": {
+            "description": "UserCredentials model count",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/loopback.Count"
+                }
+              }
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "where",
+            "in": "query",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "title": "UserCredentials.WhereFilter",
+                  "additionalProperties": true,
+                  "x-typescript-type": "@loopback/repository#Where<UserCredentials>"
+                }
+              }
+            }
+          }
+        ],
+        "operationId": "UserCredentialsController.count"
+      }
+    },
+    "/user-credentials/{id}": {
+      "put": {
+        "x-controller-name": "UserCredentialsController",
+        "x-operation-name": "replaceById",
+        "tags": [
+          "UserCredentialsController"
+        ],
+        "responses": {
+          "204": {
+            "description": "No Content",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "description": "UserCredentials PUT success"
+                }
+              }
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "schema": {
+              "type": "number"
+            },
+            "required": true
+          }
+        ],
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/UserCredentials"
+              }
+            }
+          },
+          "x-parameter-index": 1
+        },
+        "operationId": "UserCredentialsController.replaceById"
+      },
+      "patch": {
+        "x-controller-name": "UserCredentialsController",
+        "x-operation-name": "updateById",
+        "tags": [
+          "UserCredentialsController"
+        ],
+        "responses": {
+          "204": {
+            "description": "No Content",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "description": "UserCredentials PATCH success"
+                }
+              }
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "schema": {
+              "type": "number"
+            },
+            "required": true
+          }
+        ],
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/UserCredentialsPartial"
+              }
+            }
+          },
+          "x-parameter-index": 1
+        },
+        "operationId": "UserCredentialsController.updateById"
+      },
+      "get": {
+        "x-controller-name": "UserCredentialsController",
+        "x-operation-name": "findById",
+        "tags": [
+          "UserCredentialsController"
+        ],
+        "responses": {
+          "200": {
+            "description": "UserCredentials model instance",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/UserCredentialsWithRelations"
+                }
+              }
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "schema": {
+              "type": "number"
+            },
+            "required": true
+          },
+          {
+            "name": "filter",
+            "in": "query",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/UserCredentials.Filter"
+                }
+              }
+            }
+          }
+        ],
+        "operationId": "UserCredentialsController.findById"
+      },
+      "delete": {
+        "x-controller-name": "UserCredentialsController",
+        "x-operation-name": "deleteById",
+        "tags": [
+          "UserCredentialsController"
+        ],
+        "responses": {
+          "204": {
+            "description": "No Content",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "description": "UserCredentials DELETE success"
+                }
+              }
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "schema": {
+              "type": "number"
+            },
+            "required": true
+          }
+        ],
+        "operationId": "UserCredentialsController.deleteById"
+      }
+    },
+    "/user-credentials": {
+      "post": {
+        "x-controller-name": "UserCredentialsController",
+        "x-operation-name": "create",
+        "tags": [
+          "UserCredentialsController"
+        ],
+        "responses": {
+          "200": {
+            "description": "UserCredentials model instance",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/UserCredentials"
+                }
+              }
+            }
+          }
+        },
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/NewUserCredentials"
+              }
+            }
+          }
+        },
+        "operationId": "UserCredentialsController.create"
+      },
+      "patch": {
+        "x-controller-name": "UserCredentialsController",
+        "x-operation-name": "updateAll",
+        "tags": [
+          "UserCredentialsController"
+        ],
+        "responses": {
+          "200": {
+            "description": "UserCredentials PATCH success count",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/loopback.Count"
+                }
+              }
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "where",
+            "in": "query",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "title": "UserCredentials.WhereFilter",
+                  "additionalProperties": true,
+                  "x-typescript-type": "@loopback/repository#Where<UserCredentials>"
+                }
+              }
+            }
+          }
+        ],
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/UserCredentialsPartial"
+              }
+            }
+          }
+        },
+        "operationId": "UserCredentialsController.updateAll"
+      },
+      "get": {
+        "x-controller-name": "UserCredentialsController",
+        "x-operation-name": "find",
+        "tags": [
+          "UserCredentialsController"
+        ],
+        "responses": {
+          "200": {
+            "description": "Array of UserCredentials model instances",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "$ref": "#/components/schemas/UserCredentialsWithRelations"
+                  }
+                }
+              }
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "filter",
+            "in": "query",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/UserCredentials.Filter1"
+                }
+              }
+            }
+          }
+        ],
+        "operationId": "UserCredentialsController.find"
+      }
     }
   },
   "servers": [
@@ -647,6 +950,85 @@
   ],
   "components": {
     "schemas": {
+      "UserCredentials": {
+        "title": "UserCredentials",
+        "type": "object",
+        "properties": {
+          "iduser_credentials": {
+            "type": "number"
+          },
+          "username": {
+            "type": "string"
+          },
+          "password": {
+            "type": "string"
+          }
+        },
+        "required": [
+          "username",
+          "password"
+        ],
+        "additionalProperties": false
+      },
+      "NewUserCredentials": {
+        "title": "NewUserCredentials",
+        "type": "object",
+        "description": "(tsType: Omit<UserCredentials, 'iduser_credentials'>, schemaOptions: { title: 'NewUserCredentials', exclude: [ 'iduser_credentials' ] })",
+        "properties": {
+          "username": {
+            "type": "string"
+          },
+          "password": {
+            "type": "string"
+          }
+        },
+        "required": [
+          "username",
+          "password"
+        ],
+        "additionalProperties": false,
+        "x-typescript-type": "Omit<UserCredentials, 'iduser_credentials'>"
+      },
+      "UserCredentialsWithRelations": {
+        "title": "UserCredentialsWithRelations",
+        "type": "object",
+        "description": "(tsType: UserCredentialsWithRelations, schemaOptions: { includeRelations: true })",
+        "properties": {
+          "iduser_credentials": {
+            "type": "number"
+          },
+          "username": {
+            "type": "string"
+          },
+          "password": {
+            "type": "string"
+          }
+        },
+        "required": [
+          "username",
+          "password"
+        ],
+        "additionalProperties": false,
+        "x-typescript-type": "UserCredentialsWithRelations"
+      },
+      "UserCredentialsPartial": {
+        "title": "UserCredentialsPartial",
+        "type": "object",
+        "description": "(tsType: Partial<UserCredentials>, schemaOptions: { partial: true })",
+        "properties": {
+          "iduser_credentials": {
+            "type": "number"
+          },
+          "username": {
+            "type": "string"
+          },
+          "password": {
+            "type": "string"
+          }
+        },
+        "additionalProperties": false,
+        "x-typescript-type": "Partial<UserCredentials>"
+      },
       "Provider": {
         "title": "Provider",
         "type": "object",
@@ -1175,6 +1557,145 @@
         },
         "additionalProperties": false,
         "x-typescript-type": "@loopback/repository#Filter<Provider>"
+      },
+      "UserCredentials.Filter": {
+        "type": "object",
+        "title": "UserCredentials.Filter",
+        "properties": {
+          "offset": {
+            "type": "integer",
+            "minimum": 0
+          },
+          "limit": {
+            "type": "integer",
+            "minimum": 1,
+            "example": 100
+          },
+          "skip": {
+            "type": "integer",
+            "minimum": 0
+          },
+          "order": {
+            "oneOf": [
+              {
+                "type": "string"
+              },
+              {
+                "type": "array",
+                "items": {
+                  "type": "string"
+                }
+              }
+            ]
+          },
+          "fields": {
+            "oneOf": [
+              {
+                "type": "object",
+                "properties": {
+                  "iduser_credentials": {
+                    "type": "boolean"
+                  },
+                  "username": {
+                    "type": "boolean"
+                  },
+                  "password": {
+                    "type": "boolean"
+                  }
+                },
+                "additionalProperties": false
+              },
+              {
+                "type": "array",
+                "items": {
+                  "type": "string",
+                  "enum": [
+                    "iduser_credentials",
+                    "username",
+                    "password"
+                  ],
+                  "example": "iduser_credentials"
+                },
+                "uniqueItems": true
+              }
+            ],
+            "title": "UserCredentials.Fields"
+          }
+        },
+        "additionalProperties": false,
+        "x-typescript-type": "@loopback/repository#Filter<UserCredentials>"
+      },
+      "UserCredentials.Filter1": {
+        "type": "object",
+        "title": "UserCredentials.Filter",
+        "properties": {
+          "offset": {
+            "type": "integer",
+            "minimum": 0
+          },
+          "limit": {
+            "type": "integer",
+            "minimum": 1,
+            "example": 100
+          },
+          "skip": {
+            "type": "integer",
+            "minimum": 0
+          },
+          "order": {
+            "oneOf": [
+              {
+                "type": "string"
+              },
+              {
+                "type": "array",
+                "items": {
+                  "type": "string"
+                }
+              }
+            ]
+          },
+          "where": {
+            "title": "UserCredentials.WhereFilter",
+            "type": "object",
+            "additionalProperties": true
+          },
+          "fields": {
+            "oneOf": [
+              {
+                "type": "object",
+                "properties": {
+                  "iduser_credentials": {
+                    "type": "boolean"
+                  },
+                  "username": {
+                    "type": "boolean"
+                  },
+                  "password": {
+                    "type": "boolean"
+                  }
+                },
+                "additionalProperties": false
+              },
+              {
+                "type": "array",
+                "items": {
+                  "type": "string",
+                  "enum": [
+                    "iduser_credentials",
+                    "username",
+                    "password"
+                  ],
+                  "example": "iduser_credentials"
+                },
+                "uniqueItems": true
+              }
+            ],
+            "title": "UserCredentials.Fields"
+          }
+        },
+        "additionalProperties": false,
+        "x-typescript-type": "@loopback/repository#Filter<UserCredentials>"
       }
     }
   }
